# Meraki

./: .gitignore  IDEATION.md  README.md  project-audit.md
backend/: .env.exemple  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml  start_server.py  test_crews.py
backend/src/meraki_flow/: api.py  db.py  main.py  models.py  opik_metrics.py  opik_setup.py  state.py
backend/src/meraki_flow/crews/challenge_generation_crew/: __init__.py  challenge_generation_crew.py
backend/src/meraki_flow/crews/discovery_crew/: discovery_crew.py
backend/src/meraki_flow/crews/local_experiences_crew/: __init__.py  local_experiences_crew.py
backend/src/meraki_flow/crews/motivation_crew/: __init__.py  motivation_crew.py
backend/src/meraki_flow/crews/practice_crew/: __init__.py  practice_crew.py
backend/src/meraki_flow/crews/practice_feedback_crew/: __init__.py  practice_feedback_crew.py
backend/src/meraki_flow/crews/retention_crew/: retention_crew.py
backend/src/meraki_flow/evaluation/: __init__.py  analyze_experiments.py  datasets.py  evaluate_agents.py  online_rules.py  run_evaluation.py
backend/src/meraki_flow/optimization/: __init__.py  challenge_optimizer.py  discovery_optimizer.py  optimize_challenges.py  optimize_discovery.py  optimize_motivation.py  run_all.py
backend/src/meraki_flow/tools/: __init__.py  google_places.py  opik_metrics.py  opik_tracking.py  web_search.py  youtube_search.py
backend/tests/: __init__.py  test_discovery_crew.py  test_flow_routing.py  test_practice_crew.py  test_retention_crew.py  test_sampling_crew.py
frontend/: .gitignore  (+4 more)
(+184 files in other folders)
